--- a/package.json
+++ b/package.json
@@ -13,14 +13,17 @@
     "antd": "^5.1.0",
     "authereum": "^0.1.14",
     "axios": "^0.27.2",
+    "bootstrap": "^5.3.0-alpha1",
     "buffer": "^6.0.3",
     "ethers": "^5.6.8",
     "query-string": "^8.0.3",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-hot-toast": "^2.2.0",
+    "react-icons": "^4.7.1",
     "react-query": "^3.39.2",
     "react-redux": "^8.0.2",
+    "react-router-dom": "^6.6.1",
     "util.inherits": "^1.0.3",
     "web3modal": "^1.9.7"
   },
@@ -28,8 +31,11 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@vitejs/plugin-react": "^1.3.0",
+    "autoprefixer": "^10.4.13",
     "events": "^3.0.0",
+    "postcss": "^8.4.20",
     "rollup-plugin-polyfill-node": "^0.9.0",
+    "tailwindcss": "^3.2.4",
     "typescript": "^4.6.3",
     "util": "^0.12.4",
     "vite": "^2.9.9"
