--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "axios": "^0.27.2",
     "buffer": "^6.0.3",
     "ethers": "^5.6.8",
+    "firebase": "^9.15.0",
     "query-string": "^8.0.3",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-hot-toast": "^2.2.0",
+    "react-icons": "^4.7.1",
     "react-query": "^3.39.2",
     "react-redux": "^8.0.2",
     "util.inherits": "^1.0.3",
